fix(myscope): space (FOO-99)
more info

--- a/bin/templates/commit.hbs
+++ b/bin/templates/commit.hbs
@@ -1,5 +1,9 @@
-*{{#if scope}} **{{scope}}:** {{~/if}}
-{{~header}}
+*{{#if scope}} **{{scope}}:**
+{{~/if}} {{#if subject}}
+  {{~subject}}
+{{~else}}
+  {{~header}}
+{{~/if}}
 
 {{~!-- commit link --}} {{#if @root.linkReferences~}}
   ([{{shortHash}}](
