--- a/bin/templates/commit.hbs
+++ b/bin/templates/commit.hbs
@@ -1,5 +1,4 @@
-*{{#if scope}} **{{scope}}:**
-{{~/if}} {{#if subject}}
+* {{#if subject}}
   {{~subject}}
 {{~else}}
   {{~header}}
@@ -61,4 +60,5 @@
 {{#if body}}
 
 {{ body }}
+
 {{/if}}
