--- a/bin/templates/commit.hbs
+++ b/bin/templates/commit.hbs
@@ -56,10 +56,7 @@
     {{~/if}}
     {{~this.repository}}#{{this.issue}}
   {{~/if}}{{/each}}
-{{~/if}}
-{{#if body}}
-
+{{~/if}}{{#if body}}
 {{ body }}
-
 
 {{/if}}
